--- a/client/css/index.css
+++ b/client/css/index.css
@@ -1,11 +1,24 @@
 body {
     padding: 0;
     margin: 0;
-    background-color: gray;
+    background-color: #CCC;
 }
 
 .navbar-brand img {
     width: 30px;
     height: 30px;
     border-radius: 10px;
+}
+
+.show {
+    transition: 1s;
+}
+
+.carousel-item img {
+    width: 100%;
+    height: 400px;
+}
+
+.carousel-control-prev, .carousel-control-next {
+    cursor: pointer;
 }
