--- a/client/css/index.css
+++ b/client/css/index.css
@@ -23,18 +23,30 @@ body {
     cursor: pointer;
 }
 
-.editRotate {
+.editRotate, .newRotate, .deleteRotate {
+    position: absolute;
+    top: 10px;
+    left: 170px;
     color: #FFF;
-    background-color: #05F;
+    background-color: rgba(0, 0, 0, 0.3);
     display: inline-block;
     padding: 5px 10px;
     font-size: 10px;
     border-radius: 10px;
     border: 2px solid #000;
-    transition: 1s;
+    /*transition: 1s;*/
 }
 
-.editRotate:hover {
-    background-color: #00F;
+.newRotate {
+    right: 170px;
+    left: auto;
+}
+
+.deleteRotate {
+    left: 230px;
+}
+
+.editRotate:hover, .newRotate:hover, .deleteRotate:hover {
+    background-color: rgba(0, 0, 0, 0.8);
     cursor: pointer;
 }
