--- a/client/css/index.css
+++ b/client/css/index.css
@@ -1,52 +1,26 @@
-body {
-    padding: 0;
-    margin: 0;
-    background-color: #CCC;
+.menu-back {
+    background-color: #333;
 }
 
-.navbar-brand img {
-    width: 30px;
-    height: 30px;
-    border-radius: 10px;
-}
-
-.show {
+.menu-back a {
+    color: #CCC;
     transition: 1s;
 }
 
-.carousel-item img {
-    width: 100%;
-    height: 400px;
+.menu-back a:hover {
+    color: #999;
 }
 
-.carousel-control-prev, .carousel-control-next {
-    cursor: pointer;
-}
-
-.editRotate, .newRotate, .deleteRotate {
-    position: absolute;
-    top: 10px;
-    left: 170px;
+.menu-back i {
     color: #FFF;
-    background-color: rgba(0, 0, 0, 0.3);
-    display: inline-block;
-    padding: 5px 10px;
-    font-size: 10px;
-    border-radius: 10px;
-    border: 2px solid #000;
-    /*transition: 1s;*/
 }
 
-.newRotate {
-    right: 170px;
-    left: auto;
+.menu-back img {
+    width: 43px;
+    height: 43px;
+    margin-top: 4px;
 }
 
-.deleteRotate {
-    left: 230px;
-}
-
-.editRotate:hover, .newRotate:hover, .deleteRotate:hover {
-    background-color: rgba(0, 0, 0, 0.8);
+.menu-back .show-list:hover {
     cursor: pointer;
 }
