--- a/client/css/components.css
+++ b/client/css/components.css
@@ -75,6 +75,7 @@ button:hover, button:focus {
 .modal {
     background-color: #FFF;
     border: 2px solid #333;
+    color: #888;
 }
 
 .modal input {
