--- a/client/components/modals/login.html
+++ b/client/components/modals/login.html
@@ -3,8 +3,8 @@
     <div class="modal box-center box-top-50 w-md-50 w-100 bg-white round-20" style="box-shadow: 2px 2px 1px black;">
         <div class="row">
             <div class="col-1"></div>
-            <div class="col-10" ng-if="login"><h3>Prihlásenie</h3></div>
-            <div class="col-10" ng-if="!login"><h3>Registrácia</h3></div>
+            <div class="col-10" ng-if="login"><h3><i class="fas fa-user-check"></i> Prihlásenie</h3></div>
+            <div class="col-10" ng-if="!login"><h3><i class="fas fa-user-plus"></i> Registrácia</h3></div>
             <div class="col-1 tright pd-5">
                 <i ng-click="hideLogin()" class="far fa-times-circle btn-i" style="font-size: 25px;"></i>
             </div>
@@ -12,18 +12,24 @@
         <span class="line"></span>
         <div ng-if="login">
             <div class="row pd-10">
-                <div class="col-2 tcenter tbig">E-mail: </div>
-                <div class="col-7">
+                <div class="col-3 tright tbig">E-mail: </div>
+                <div class="col-8">
                     <input class="w-100" type="text" placeholder="example@example.com" ng-model="loginData.mail" ng-change="checkInputLogin()">
                 </div>
-                <div class="col-1"></div>
+                <div class="col-1 tbig">
+                    <i class="fas fa-check green" ng-if="!logErr[0]"></i>
+                    <i class="fas fa-times red" ng-if="logErr[0]"></i>
+                </div>
             </div>
             <div class="row pd-10">
-                <div class="col-2 tcenter tbig">Heslo: </div>
-                <div class="col-7">
+                <div class="col-3 tright tbig">Heslo: </div>
+                <div class="col-8">
                     <input class="w-100" type="password" placeholder="Password" ng-model="loginData.pass" ng-change="checkInputLogin()">
                 </div>
-                <div class="col-1"></div>
+                <div class="col-1 tbig">
+                    <i class="fas fa-check green" ng-if="!logErr[1]"></i>
+                    <i class="fas fa-times red" ng-if="logErr[1]"></i>
+                </div>
             </div>
             <div class="row pd-10">
                 <div class="col-1"></div>
@@ -35,60 +41,81 @@
         </div>
         <div ng-if="!login">
             <div class="row pd-10">
-                <div class="col-2 tcenter tbig">E-mail: </div>
-                <div class="col-7">
-                    <input class="w-100" type="email" placeholder="example@example.com" ng-model="mail">
+                <div class="col-3 tright tbig">E-mail: </div>
+                <div class="col-8">
+                    <input class="w-100" type="text" placeholder="example@example.com" ng-model="registerData.mail" ng-change="checkInputRegister()">
                 </div>
-                <div class="col-1"></div>
+                <div class="col-1 tbig">
+                    <i class="fas fa-check green" ng-if="!regErr[0]"></i>
+                    <i class="fas fa-times red" ng-if="regErr[0]"></i>
+                </div>
             </div>
             <div class="row pd-10">
-                <div class="col-2 tcenter tbig">Heslo: </div>
-                <div class="col-7">
-                    <input class="w-100" type="password" placeholder="Password" ng-model="pass">
+                <div class="col-3 tright tbig">Heslo: </div>
+                <div class="col-8">
+                    <input class="w-100" type="password" placeholder="Password" ng-model="registerData.pass" ng-change="checkInputRegister()">
                 </div>
-                <div class="col-1"></div>
+                <div class="col-1 tbig">
+                    <i class="fas fa-check green" ng-if="!regErr[1]"></i>
+                    <i class="fas fa-times red" ng-if="regErr[1]"></i>
+                </div>
             </div>
             <div class="row pd-10">
-                <div class="col-2 tcenter tbig">Heslo (znova): </div>
-                <div class="col-7">
-                    <input class="w-100" type="password" placeholder="Password" ng-model="pass">
+                <div class="col-3 tright tbig">Heslo: </div>
+                <div class="col-8">
+                    <input class="w-100" type="password" placeholder="Password" ng-model="registerData.pass2" ng-change="checkInputRegister()">
                 </div>
-                <div class="col-1"></div>
+                <div class="col-1 tbig">
+                    <i class="fas fa-check green" ng-if="!regErr[2]"></i>
+                    <i class="fas fa-times red" ng-if="regErr[2]"></i>
+                </div>
             </div>
             <div class="row pd-10">
-                <div class="col-2 tcenter tbig">Meno: </div>
-                <div class="col-7">
-                    <input class="w-100" type="text" placeholder="Meno" ng-model="pass">
+                <div class="col-3 tright tbig">Meno: </div>
+                <div class="col-8">
+                    <input class="w-100" type="text" placeholder="Meno" ng-model="registerData.fname" ng-change="checkInputRegister()">
                 </div>
-                <div class="col-1"></div>
+                <div class="col-1 tbig">
+                    <i class="fas fa-check green" ng-if="!regErr[3]"></i>
+                    <i class="fas fa-times red" ng-if="regErr[3]"></i>
+                </div>
             </div>
             <div class="row pd-10">
-                <div class="col-2 tcenter tbig">Priezvisko: </div>
-                <div class="col-7">
-                    <input class="w-100" type="text" placeholder="Priezvisko" ng-model="pass">
+                <div class="col-3 tright tbig">Priezvisko: </div>
+                <div class="col-8">
+                    <input class="w-100" type="text" placeholder="Priezvisko" ng-model="registerData.lname" ng-change="checkInputRegister()">
                 </div>
-                <div class="col-1"></div>
+                <div class="col-1 tbig">
+                    <i class="fas fa-check green" ng-if="!regErr[4]"></i>
+                    <i class="fas fa-times red" ng-if="regErr[4]"></i>
+                </div>
             </div>
             <div class="row pd-10">
-                <div class="col-2 tcenter tbig">Spoločnosť: </div>
-                <div class="col-7">
-                    <input class="w-100" type="text" placeholder="Spoločnosť" ng-model="pass">
+                <div class="col-3 tright tbig">Spoločnosť: </div>
+                <div class="col-8">
+                    <input class="w-100" type="text" placeholder="Spoločnosť" ng-model="registerData.comp" ng-change="checkInputRegister()">
                 </div>
-                <div class="col-1"></div>
+                <div class="col-1 tbig">
+                    <i class="fas fa-check green" ng-if="!regErr[5]"></i>
+                    <i class="fas fa-times red" ng-if="regErr[5]"></i>
+                </div>
             </div>
             <div class="row pd-10">
-                <div class="col-2 tcenter tbig">Tel. č.: </div>
-                <div class="col-7">
-                    <input class="w-100" type="text" placeholder="+421..." ng-model="pass">
+                <div class="col-3 tright tbig">Tel. č.: </div>
+                <div class="col-8">
+                    <input class="w-100" type="text" placeholder="+421..." ng-model="registerData.phone" ng-change="checkInputRegister()">
                 </div>
-                <div class="col-1"></div>
+                <div class="col-1 tbig">
+                    <i class="fas fa-check green" ng-if="!regErr[6]"></i>
+                    <i class="fas fa-times red" ng-if="regErr[6]"></i>
+                </div>
             </div>
             <div class="row pd-10">
-                <div class="col-1"></div>
-                <div class="col-7 tcenter">
+                <div class="col-2"></div>
+                <div class="col-8 tcenter">
                     {{ errorMessageRegister }}
                 </div>
-                <div class="col-1"></div>
+                <div class="col-2"></div>
             </div>
         </div>
         <span class="line"></span>
