--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1,13 +1,3 @@
-@font-face {
-    font-family: "Grawtrac";
-    src: url("fonts/gravtrac compressed bd.ttf");
-}
-
-@font-face {
-    font-family: "Reguloza";
-    src: url("fonts/Reguloza-Regular.ttf");
-}
-
 .top-bar {
     background: rgb(3,0,50);
     background: linear-gradient(153deg, rgba(3,0,50,1) 23%, rgba(3,3,175,1) 44%, rgba(0,212,255,1) 100%);
@@ -113,6 +103,68 @@
 
 .left li ul li:hover  {
     text-shadow: 1px 1px 0px #FFF, -1px 1px 0px #FFF, 1px -1px 0px #FFF, -1px -1px 0px #FFF;
+}
+
+.menu-button {
+    color: #FFF;
+    font-size: 35px;
+    font-weight: bold;
+    text-align: center;
+    background: rgb(0, 51, 170);
+    background: linear-gradient(153deg, rgba(3,0,50,1) 23%, rgba(3,3,120,1) 44%, rgba(3,0,50,1) 100%);
+    padding: 5px 10px;
+    border-top: 1px solid #555;
+}
+
+.under-top {
+    background-color: #07F;
+    background-image:  url("../design/top_img_small.jpg");
+    background-position: center;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    border-bottom: 5px solid #07F;
+}
+
+.infobox {
+    margin: 30px 0px;
+}
+
+.infobox .head {
+    background-color: rgba(0, 0, 0, 0.7);
+    display: inline-block;
+    color: #FFF;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+}
+
+.infobox .head h2 {
+    padding: 8px 25px;
+}
+
+.infobox .body {
+    font-size: 18px;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #FFF;
+    border-top-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    padding: 8px 25px;
+}
+
+@media only screen and (max-width: 767px) { 
+    .menu-hide {
+        max-height: 50px;
+        overflow: hidden;
+        transition: 2s;
+    }
+
+    .menu-hide:hover {
+        max-height: 800px;
+    }
+
+    .under-top {
+        background-size: auto;
+    }
 }
 
 @media only screen and (min-width: 1200px) {
