--- a/client/css/components.css
+++ b/client/css/components.css
@@ -3,7 +3,7 @@ a {
     text-decoration: none;
 }
 
-input, textarea {
+input, textarea, select, option {
     color: #555;
     background-color: #FFF;
     padding: 5px;
@@ -26,6 +26,7 @@ button {
     padding: 7px 14px;
     color: #555;
     box-shadow: 1px 1px 0px #999;
+    transition: 0.3s;
 }
 
 .btn-prim {
@@ -61,6 +62,7 @@ button {
 button:hover, button:focus {
     box-shadow: none;
     cursor: pointer;
+    background-color: #EEE;
 }
 
 .blackBack {
