--- a/client/css/myTrap.css
+++ b/client/css/myTrap.css
@@ -60,7 +60,6 @@ body {
     width: 100%;
     height: 100%;
     font-size: 14px;
-    background-color: #FFF;
 }
 
 h1 { font-size: 35px; padding: 10px; margin: 0px; }
@@ -72,7 +71,8 @@ h6 { font-size: 10px; padding: 5px; margin: 0px; }
 
 .tmaxi { font-size: 36px; }
 .tbig { font-size: 24px; }
-.tprim { font-size: 18px; }
+.tprim { font-size: 20px; }
+.tmid { font-size: 16px; }
 .tsec { font-size: 14px; }
 
 .twhite { color: #FFF; }
@@ -128,10 +128,11 @@ h6 { font-size: 10px; padding: 5px; margin: 0px; }
 .round-bottom-40 { border-bottom-left-radius: 40px; border-bottom-right-radius: 40px; }
 .round-bottom-50 { border-bottom-left-radius: 50px; border-bottom-right-radius: 50px; }
 
-.box-left { margin-left: 0; margin-right: auto; }
+.box-left { margin-left: 0; margin-right: auto; } /* TODO: rozlisenia */
 .box-right { margin-left: auto; margin-right: 0; }
 .box-center { margin: auto; }
 .box-top-m50 { margin-top: -50px; }
+.box-top-25 { margin-top: 25px; }
 .box-top-50 { margin-top: 50px; }
 .box-top-100 { margin-top: 100px; }
 .box-top-150 { margin-top: 150px; }
@@ -146,10 +147,11 @@ h6 { font-size: 10px; padding: 5px; margin: 0px; }
 .container { margin: auto; width: 1400px; }
 .container-full { width: 100%; }
 
-.row { width: 100%; display: flex; align-items: stretch; }
-.column { width: 100%; display: block; align-items: stretch; }
+.row { /*width: 100%;*/ display: flex; align-items: stretch; }
+.column { /*width: 100%;*/ display: block; align-items: stretch; }
 
 .col { flex: 1; }
+.col-0 { flex: 0; }
 .col-1 { flex: 1; }
 .col-2 { flex: 2; }
 .col-3 {  flex: 3; }
