--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1,7 +1,13 @@
+body {
+    background-color: #DDD;
+    font-family: Arial;
+    font-size: 16px;
+}
+
 .top-bar {
     background: rgb(3,0,50);
     background: linear-gradient(153deg, rgba(3,0,50,1) 23%, rgba(3,3,175,1) 44%, rgba(0,212,255,1) 100%);
-    border-bottom: 3px solid #DDD;
+    border-bottom: 3px solid #FFF;
 }
 
 .logo {
@@ -18,7 +24,6 @@
     margin-left: 5px;
     color: #FFF;
     font-weight: bold;
-    font-family: Times New Roman, Times, serif;
 }
 
 .logo-text::after { /* zdroj: https://codepen.io/imbaniac/pen/ZOBoxJ */
@@ -41,13 +46,13 @@
     border-top-right-radius: 7px;
     font-weight: bold;
     display: inline-block;
-    font-family: Times New Roman, Times, serif;
     font-size: 22px;
     background: rgb(0, 51, 170);
     background: linear-gradient(153deg, rgba(3,0,50,1) 23%, rgba(3,3,120,1) 44%, rgba(3,0,50,1) 100%);
     border: 1px solid #777;
     border-bottom: none;
     padding: 10px 20px 10px 20px;
+    transition: text-shadow 0.3s;
 }
 
 .button-active {
@@ -56,7 +61,6 @@
     border-top-right-radius: 10px;
     font-weight: bold;
     display: inline-block;
-    font-family: Times New Roman, Times, serif;
     font-size: 25px;
     background: rgb(233, 233, 233);
     background: linear-gradient(153deg, rgba(221,221,221,1) 23%, rgba(255,255,255,1) 44%, rgba(221,221,221,1) 100%);
@@ -72,7 +76,6 @@
     color: #EEE;
     font-size: 22px;
     font-weight: bold;
-    font-family: Times New Roman, Times, serif;
     padding: 5px 25px;
     margin-top: 25px;
 }
@@ -151,7 +154,60 @@
     padding: 8px 25px;
 }
 
-@media only screen and (max-width: 767px) { 
+.page {
+    background-color: #FFF;
+}
+
+.home img {
+    width: 100%;
+    border-radius: 10px;
+    border: 2px solid #BBB;
+}
+
+.home .header {
+    font-size: 25px;
+    font-weight: bold;
+    padding: 5px 55px;
+    background: rgb(3,0,50);
+    background: linear-gradient(153deg, rgba(3,0,50,1) 23%, rgba(3,3,175,1) 44%, rgba(0,212,255,1) 100%);
+    border-radius: 0px 25px 0px 0px;
+    color: #FFF;
+}
+
+.home .date {
+    text-align: right;
+    font-weight: bold;
+    background: linear-gradient(153deg, rgba(0,212,255,1) 23%, rgba(3,3,175,1) 44%, rgba(3,0,50,1) 100%);
+    padding: 5px 25px;
+    border-radius: 0px 0px 0px 15px;
+    color: #FFF;
+}
+
+.home .text {
+    border-right: 2px solid #999;
+}
+
+.home .img {
+    border-left: 2px solid #999;
+}
+
+.page-head {
+    font-size: 45px;
+    font-weight: bold;
+}
+
+.product {
+    padding-bottom: 10px;
+    border-top: 1px solid #999;
+}
+
+.prod-info {
+    padding: 10px;
+    border-radius: 10px;
+    background-color: #DDD;
+}
+
+@media only screen and (max-width: 767px) { /* SM */
     .menu-hide {
         max-height: 50px;
         overflow: hidden;
@@ -165,16 +221,24 @@
     .under-top {
         background-size: auto;
     }
+
+    .home .text {
+        border-right: none;
+    }
+    
+    .home .img {
+        border-left: none;
+    }
 }
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1200px) { /* LG */
     .menu {
         position: static; 
         margin-top: 41px;
     }
 }
 
-@media only screen and (max-width: 575px) { 
+@media only screen and (max-width: 575px) {  /* XS */
     .left {
         margin-top: 5px;
     }
