--- a/client/css/myTrap.css
+++ b/client/css/myTrap.css
@@ -188,6 +188,7 @@ th.col-12, td.col-12 { width: 100.00%; }
 
 .bottom { position: absolute; bottom: 0px; }
 
+.pd-0 { padding: 0px; }
 .pd-5 { padding: 5px; } /* TODO: dorobit na rozlisenia */
 .pd-10 { padding: 10px; }
 .pd-15 { padding: 15px; }
