--- a/client/css/style.css
+++ b/client/css/style.css
@@ -87,7 +87,6 @@ body {
     max-height: 0px;
     overflow: hidden;
     border-radius: 15px;
-    border: 2px solid #FFF;
     transition: max-height 1s;
     z-index: 1;
 }
@@ -102,6 +101,7 @@ body {
 
 .left li:hover ul {
     max-height: 200px;
+    border: 2px solid #FFF;
 }
 
 .left li ul li:hover  {
@@ -278,6 +278,25 @@ input .find {
     border: 2px solid #FFF;
 }
 
+.bot {
+    border-top: 2px solid #FFF;
+    padding: 20px 35px;
+    text-align: right;
+    color: #FFF;
+    font-size: 22px;
+    background: linear-gradient(153deg, rgba(0,212,255,1) 23%, rgba(3,3,175,1) 44%, rgba(3,0,50,1) 100%);
+}
+
+.order {
+    border: 2px solid #555;
+    border-radius: 5px;
+    margin: 10px;
+}
+
+.item {
+    border: 1px solid #999;
+}
+
 @media only screen and (max-width: 767px) { /* SM */
     .menu-hide {
         max-height: 50px;
@@ -315,6 +334,11 @@ input .find {
     }
 
     .left li ul {
+        position: static;
+        border: none;
+    }
+
+    .left li:hover ul {
         position: static;
         border: none;
     }
